# flask-practice

./: Makefile  README.md  pyproject.toml
lessons_practice/: data.py  example.py  repository.py
lessons_practice/templates/: index.html  layout.html
lessons_practice/templates/posts/: index.html  show.html
lessons_practice/templates/users/: index.html  show.html
